Bug 642977. Don't suppress painting if the document isn't loading; r=bz